--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
-    "react-simple-dropdown": "^3.2.0"
+    "react-simple-dropdown": "^3.2.0",
+    "react-slick": "^0.15.4"
   },
   "scripts": {
     "start": "react-scripts start",
