--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "react-simple-dropdown": "^3.2.0",
-    "react-slick": "^0.15.4"
+    "react-slick": "^0.15.4",
+    "react-syntax-highlighter": "^5.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
