--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-adinkra": "^1.0.4",
     "react-dom": "^16.0.0",
     "react-fontawesome": "^1.6.1",
+    "react-modal": "^3.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "react-simple-dropdown": "^3.2.0",
